--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <h1>DCC138 Exemplo01</h1>
+    <canvas></canvas>
+    <p>por Lucca Oliveira (2020)</p>
+    <script>
+        let canvas = document.querySelector("canvas");
+        canvas.width = 480;
+        canvas.height = 320;
 
-    <p>por Lucca Oliveira</p>
+    </script>
 </body>
 </html>
