--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <p>por Lucca Oliveira (2020)</p>
     <script>
         let canvas = document.querySelector("canvas");
+        let ctx = canvas.getContext("2d");
         canvas.width = 480;
         canvas.height = 320;
+
+        ctx.fillStyle = "black";
+        
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
 
     </script>
 </body>
