--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             //Atualiza estado
-            x = x + 10*dt;
+            x = 100 + 1500*Math.sin(t/200)*dt;
             y = 100 + 1500*Math.cos(t/200)*dt;
 
             // Desenha elementos
