--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             ay: 0,
             cor: "red",
             desenhar: desenharElemento,
-            mover: moverElemento
+            mover: moverElemento,
+            controlar: perseguirAlvo
         };
 
 
@@ -52,16 +53,15 @@
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             //Controladores
-            e.ax = 0.5*(p.x - e.x) - 0.2*e.vx;
-            e.ay = 0.5*(p.y - e.y) - 0.2*e.vy;
+            // e.controlar({x: 250, y: 120});
+            e.controlar(p);
 
             //Atualiza dinamica dos estados
             p.mover();
-
             e.mover();
+
             // Desenha elementos
             p.desenhar();
-
             e.desenhar();
 
             requestAnimationFrame(desenha);
@@ -79,6 +79,17 @@
                 ctx.fillStyle = this.cor;
                 ctx.fillRect(this.x, this.y, 20, 20);
         }
+
+        function perseguirAlvo(alvo) {
+            e.ax = 0.5*(alvo.x - this.x) - 0.2*this.vx;
+            e.ay = 0.5*(alvo.y - this.y) - 0.2*this.vy;
+        }
+
+        function evitarAlvo(alvo) {
+            e.ax = -0.5*(alvo.x - this.x) - 0.2*this.vx;
+            e.ay = -0.5*(alvo.y - this.y) - 0.2*this.vy;
+        }
+
 
         addEventListener("keydown", teclaPressionada);
         addEventListener("keyup", teclaSolta);
