altera sprites para multiplos inimigos

--- a/index.html
+++ b/index.html
@@ -26,19 +26,22 @@
             mover: moverElemento
         };
 
-        let e = {
-            x: 300,
-            vx: 0,
-            ax: 0,
-            y: 200,
-            vy: 0,
-            ay: 0,
-            cor: "red",
-            desenhar: desenharElemento,
-            mover: moverElemento,
-            controlar: perseguirAlvo
-        };
-
+        const sprites = [];
+        for (let ne = 0; ne < 20; ne++) {
+            let e = {
+                x: canvas.width * Math.random(),
+                vx: 0,
+                ax: 0,
+                y: canvas.height * Math.random(),
+                vy: 0,
+                ay: 0,
+                cor: "red",
+                desenhar: desenharElemento,
+                mover: moverElemento,
+                controlar: perseguirAlvo
+            };
+            sprites.push(e);
+        }
 
         const K = 180;
         let t0;
@@ -48,21 +51,23 @@
         function desenha(t) {
             t0 = t0 ?? t;
             dt = (t - t0)/1000;
-            // Desenha fundo
+            //Desenha fundo
             ctx.fillStyle = "black";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            //Controladores
-            // e.controlar({x: 250, y: 120});
-            e.controlar(p);
-
-            //Atualiza dinamica dos estados
             p.mover();
-            e.mover();
-
-            // Desenha elementos
             p.desenhar();
-            e.desenhar();
+            for (let s = 0; s < sprites.length; s++) {
+                const sprite = sprites[s];
+                //Controladores
+                //sprite.controlar({x: 250, y: 120});
+                sprite.controlar(p);
+                //Atualiza dinamica dos estados
+                sprite.mover();
+                //Desenha elementos
+                sprite.desenhar();
+            }
+
 
             requestAnimationFrame(desenha);
             t0 = t;
@@ -81,13 +86,13 @@
         }
 
         function perseguirAlvo(alvo) {
-            e.ax = 0.5*(alvo.x - this.x) - 0.2*this.vx;
-            e.ay = 0.5*(alvo.y - this.y) - 0.2*this.vy;
+            this.ax = 0.5*(alvo.x - this.x) - 0.2*this.vx;
+            this.ay = 0.5*(alvo.y - this.y) - 0.2*this.vy;
         }
 
         function evitarAlvo(alvo) {
-            e.ax = -0.5*(alvo.x - this.x) - 0.2*this.vx;
-            e.ay = -0.5*(alvo.y - this.y) - 0.2*this.vy;
+            this.ax = -0.5*(alvo.x - this.x) - 0.2*this.vx;
+            this.ay = -0.5*(alvo.y - this.y) - 0.2*this.vy;
         }
 
 
