--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         let ctx = canvas.getContext("2d");
         canvas.width = 480;
         canvas.height = 320;
+        let pontos = 0;
         let p = {
             x: 150,
             vx: 0,
@@ -86,7 +87,31 @@
                 sprite.mover?.();
                 //Desenha elementos
                 sprite.desenhar();
+
+                if(colidiram(o, sprite) && o !== sprite) {
+                    o.x = -1000;
+                    o.y = -1000;
+                    o.vx = 0;
+                    o.ax = 0;
+                    sprite.x = 1000;
+                    sprite.vx = 100;
+                    sprite.ax = 0;
+                    pontos++;
+                }
+                if(colidiram(p, sprite) && o !== sprite) {
+                    o.x = -1000;
+                    o.y = -1000;
+                    o.vx = 0;
+                    o.ax = 0;
+                    sprite.x = 1000;
+                    sprite.vx = 100;
+                    sprite.ax = 0;
+                    pontos -= 3;
+                }
             }
+            ctx.fillStyle = "yellow";
+            ctx.font = "20px Impact";
+            ctx.fillText(pontos, 10, 30);
 
 
             requestAnimationFrame(desenha);
@@ -120,8 +145,7 @@
         addEventListener("keyup", teclaSolta);
 
         function teclaPressionada(event) {
-            // Adiciona controle de velocidades
-            console.log(event.key);
+            // Adiciona controle de velocidade
             switch (event.key) {
                 case "ArrowUp":
                     p.ay = -K;
@@ -163,6 +187,15 @@
                     }
                     break;
             }
+        }
+
+        function colidiram(A, B) {
+            return !(
+                (A.x > B.x + 20)
+                || (A.x + 20 < B.x)
+                || (A.y > B.y + 20)
+                || (A.y + 20 < B.y)
+            );
         }
 
     </script>
