Adiciona largura e altura a sprites

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             y: 100,
             vy: 0,
             ay: 0,
+            w: 40,
+            h: 15,
             cor: "white",
             desenhar: desenharElemento,
             mover: moverElemento
@@ -36,6 +38,8 @@
                 y: canvas.height * Math.random(),
                 vy: 0,
                 ay: 0,
+                w: 15,
+                h: 15,
                 cor: "red",
                 desenhar: desenharElemento,
                 mover: moverElemento,
@@ -51,6 +55,8 @@
             y: 150,
             vy: 0,
             ay: 0,
+            w: 5,
+            h: 5,
             cor: "blue",
             desenhar: desenharElemento,
             mover: moverElemento,
@@ -77,7 +83,6 @@
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             p.mover();
-            p.desenhar();
             for (let s = 0; s < sprites.length; s++) {
                 const sprite = sprites[s];
                 //Controladores
@@ -87,7 +92,7 @@
                 sprite.mover?.();
                 //Desenha elementos
                 sprite.desenhar();
-
+                
                 if(colidiram(o, sprite) && o !== sprite) {
                     o.x = -1000;
                     o.y = -1000;
@@ -109,6 +114,8 @@
                     pontos -= 3;
                 }
             }
+            p.desenhar();
+
             ctx.fillStyle = "yellow";
             ctx.font = "20px Impact";
             ctx.fillText(pontos, 10, 30);
@@ -127,7 +134,7 @@
 
         function desenharElemento() {
                 ctx.fillStyle = this.cor;
-                ctx.fillRect(this.x, this.y, 20, 20);
+                ctx.fillRect(this.x, this.y, this.w, this.h);
         }
 
         function perseguirAlvo(alvo) {
@@ -164,7 +171,6 @@
 
         function teclaSolta(event) {
             // Adiciona controle de velocidades
-            console.log(event.key);
             switch (event.key) {
                 case "ArrowUp":
                     p.ay = 0;
@@ -191,10 +197,10 @@
 
         function colidiram(A, B) {
             return !(
-                (A.x > B.x + 20)
-                || (A.x + 20 < B.x)
-                || (A.y > B.y + 20)
-                || (A.y + 20 < B.y)
+                (A.x > B.x + B.w)
+                || (A.x + A.w < B.x)
+                || (A.y > B.y + B.h)
+                || (A.y + A.h < B.y)
             );
         }
 
